prod_stage/deploy/istio-configuration/istio.yaml
# Copyright 2018 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-app-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "staging.test1"
    - "production.test1"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-app-staging
  namespace: staging
spec:
  hosts:
  - "staging.test1"
  gateways:
  - web-app-gateway.istio-system
  http:
  - name: "staging"
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host:  web-app-service.staging.svc.cluster.local
        port:
          number: 2000
    #    subset: staging
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-app-staging
  namespace: production
spec:
  hosts:
    - "production.test1"
  gateways:
    - web-app-gateway.istio-system
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host:  web-app-service.production.svc.cluster.local
            port:
              number: 2000
